--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>The Code Review</title>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
@@ -12,16 +13,7 @@
       <link href="css/styles.css" rel="stylesheet">
       <title>Responsive Layout Portfolio</title>
     </head>
-    
-    <nav>
-      <h1><a href="#">Student Name</a></h1>
-      <ul class="top-nav">
-        <li><a href="#">home</a></li>
-        <li><a href="#portfolio">portfolio</a></li>
-        <li><a href="#skills">skills</a></li>
-        <li><a href="#contact">contact</a></li>
-      </ul>
-    </nav>
+
 
     <header>
     </header>
