--- a/index.html
+++ b/index.html
@@ -10,11 +10,82 @@
       <link href="css/styles.css" rel="stylesheet">
     </head>
 
-
     <header>
+      <h1 class="title">The Code Review</h1>
     </header>
+
+    <div>
+      <h3>Signup for our newsletter</h3>
+      <p>Get the latest news on how your code is doing straight in your inbox</p>
     </div>
+
+    <h3>Contact Information</h3>
+    <form>
+      <fieldset>
+
+      </fieldset>
+    </form>
 
     <footer></footer>
   </body>
 </html>
+
+
+
+<!-- From practice ideas
+   <header>
+  <div id="logo">
+      <div class="container">
+          <img src="images/taco-emoji.png" alt="Tacos By Roscoe taco emoji logo" id="logo-img">
+          <span id="logo-text">Tacos By Roscoe</span>
+      </div> 
+  </div>
+  <nav class="container">
+      <ul class="nav-flex">
+          <li><a href="index.html">Delivery</a></li>
+          <li><a>Billing</a></li>
+          <li><a>Review</a></li>
+      </ul>
+  </nav>
+</header>
+<main>
+  <div class="container">
+      <div id="summary">
+          <i class="fas fa-utensils fa-3x"></i>
+          <div id="summary-text">
+              <p>Delivery by 7pm, April 13, 2020</p>
+              <p>6 items, <span class="check"></span> $31.44</p>
+          </div>
+      </div>
+      
+      form goes here. Legend creates a "caption"-->
+      <!-- <form>
+          <fieldset>
+              <legend>Delivery Information</legend>
+              <p class="hint">* - required field</p>
+              <label for="name">Your Name *</label>
+              <input type="text" id="name" name="user_name">
+              <label for="email">Email Address *</label>
+              <input type="email" id="email" name="user-email">
+              <p class="hint">Reciept Will Be Sent To This Address</p>
+              <label for="address1">Street Address *</label>
+              <input type="text" id="address1" name="user-address1">
+              <label for="address2">Apartment/Office Number</label>
+              <input type="text" id="address2" name="user-address2">
+              <label for="zip">Zip Code *</label>
+              <input type="text" id="zip" name="user-zip">
+              <p class="hint">City and state will be looked up from Zip Code</p>
+              <label for="phone">Phone</label>
+              <input type="tel" id="phone" name="user-phone">
+              <p class="hint">No Phone? Include alternate contact below.</p>
+              <label for="delivery-instructions">Delivery Instructions</label>
+              <textarea id="delivery-instructions" name="user-delivery-instructions"></textarea>
+              <button type="submit">Continue to billing</button>
+          </fieldset>
+
+      </form>
+      
+  </div>
+</main>
+</body>
+</html> -->
