Added states to dropdown list

--- a/index.html
+++ b/index.html
@@ -31,7 +31,59 @@
         <label for="address">Street Address</label>
         <input type="text" id="address" name="user_address"><br>
         <label for="state">State</label>
-        <input type="text" id="state" name="user_state"><br>
+            <select id="state" name="user_state">
+            <optgroup label="State">
+              <option value="Alabama">Alabama</option>
+              <option value="Alaska">Alaska</option>
+              <option value="Arizona">Arizona</option>
+              <option value="Arkansas">Arkansas</option>
+California    <option value="California">California</option>
+Colorado      <option value="Colorado">Colorado</option>
+Connecticut   <option value=""></option>
+Delaware      <option value=""></option>
+Florida       <option value=""></option>
+Georgia       <option value=""></option>
+Hawaii        <option value=""></option>
+Idaho         <option value=""></option>
+Illinois      <option value=""></option>
+Indiana       <option value=""></option>
+Iowa          <option value=""></option>
+Kansas        <option value=""></option>
+Kentucky      <option value=""></option>
+Louisiana     <option value=""></option>
+Maine         <option value=""></option>
+Maryland      <option value=""></option>
+Massachusetts <option value=""></option>
+Michigan      <option value=""></option>
+Minnesota     <option value=""></option>
+Mississippi   <option value=""></option>
+Missouri      <option value=""></option>
+Montana       <option value=""></option>
+Nebraska      <option value=""></option>
+Nevada        <option value=""></option>
+New Hampshire <option value=""></option>
+New Jersey    <option value=""></option>
+New Mexico    <option value=""></option>
+New York      <option value=""></option>
+North Carolina<option value=""></option>
+North Dakota  <option value=""></option>
+Ohio          <option value=""></option>
+Oklahoma      <option value=""></option>
+Oregon        <option value=""></option>
+Pennsylvania  <option value=""></option>
+Rhode Island  <option value=""></option>
+South Carolina<option value=""></option>
+South Dakota  <option value=""></option>
+Tennessee     <option value=""></option>
+Texas         <option value=""></option>
+Utah          <option value=""></option>
+Vermont       <option value=""></option>
+Virginia      <option value=""></option>
+Washington    <option value=""></option>
+West Virginia <option value=""></option>
+Wisconsin     <option value=""></option>
+Wyoming       <option value=""></option>
+ -->
         <label for="zipcode">Zipcode</label>
         <input type="text" id="zipcode" name="user_zipcode"><br>
       </fieldset>
