Added all the states

--- a/index.html
+++ b/index.html
@@ -31,59 +31,60 @@
         <label for="address">Street Address</label>
         <input type="text" id="address" name="user_address"><br>
         <label for="state">State</label>
-            <select id="state" name="user_state">
+            <select id="state" name="user_state"><br>
             <optgroup label="State">
-              <option value="Alabama">Alabama</option>
-              <option value="Alaska">Alaska</option>
-              <option value="Arizona">Arizona</option>
-              <option value="Arkansas">Arkansas</option>
-California    <option value="California">California</option>
-Colorado      <option value="Colorado">Colorado</option>
-Connecticut   <option value=""></option>
-Delaware      <option value=""></option>
-Florida       <option value=""></option>
-Georgia       <option value=""></option>
-Hawaii        <option value=""></option>
-Idaho         <option value=""></option>
-Illinois      <option value=""></option>
-Indiana       <option value=""></option>
-Iowa          <option value=""></option>
-Kansas        <option value=""></option>
-Kentucky      <option value=""></option>
-Louisiana     <option value=""></option>
-Maine         <option value=""></option>
-Maryland      <option value=""></option>
-Massachusetts <option value=""></option>
-Michigan      <option value=""></option>
-Minnesota     <option value=""></option>
-Mississippi   <option value=""></option>
-Missouri      <option value=""></option>
-Montana       <option value=""></option>
-Nebraska      <option value=""></option>
-Nevada        <option value=""></option>
-New Hampshire <option value=""></option>
-New Jersey    <option value=""></option>
-New Mexico    <option value=""></option>
-New York      <option value=""></option>
-North Carolina<option value=""></option>
-North Dakota  <option value=""></option>
-Ohio          <option value=""></option>
-Oklahoma      <option value=""></option>
-Oregon        <option value=""></option>
-Pennsylvania  <option value=""></option>
-Rhode Island  <option value=""></option>
-South Carolina<option value=""></option>
-South Dakota  <option value=""></option>
-Tennessee     <option value=""></option>
-Texas         <option value=""></option>
-Utah          <option value=""></option>
-Vermont       <option value=""></option>
-Virginia      <option value=""></option>
-Washington    <option value=""></option>
-West Virginia <option value=""></option>
-Wisconsin     <option value=""></option>
-Wyoming       <option value=""></option>
- -->
+                <option value="Alabama">Alabama</option>
+                <option value="Alaska">Alaska</option>
+                <option value="Arizona">Arizona</option>
+                <option value="Arkansas">Arkansas</option>
+                <option value="California">California</option>
+                <option value="Colorado">Colorado</option>
+                <option value="Connecticut">Connecticut</option>
+                <option value="Delaware">Delaware</option>
+                <option value="Florida">Florida</option>
+                <option value="Georgia">Georgia</option>
+                <option value="Hawaii">Hawaii</option>
+                <option value="Idaho">Idaho</option>
+                <option value="Illinois">Illinois</option>
+                <option value="Indiana">Indiana</option>
+                <option value="Iowa">Iowa</option>
+                <option value="Kansas">Kansas</option>
+                <option value="Kentucky">Kentucky</option>
+                <option value="Louisiana">Louisiana</option>
+                <option value="Maine">Maine</option>
+                <option value="Maryland">Maryland</option>
+                <option value="Massachusetts">Massachusetts</option>
+                <option value="Michigan">Michigan</option>
+                <option value="Minnesota">Minnesota</option>
+                <option value="Mississippi">Mississippi</option>
+                <option value="Missouri">Missouri</option>
+                <option value="Montana">Montana</option>
+                <option value="Nebraska">Nebraska</option>
+                <option value="Nevada">Nevada</option>
+                <option value="New Hampshire">New Hampshire</option>
+                <option value="New Jersey">New Jersey</option>
+                <option value="New Mexico">New Mexico</option>
+                <option value="New York">New York</option>
+                <option value="North Carolina">North Carolina</option>
+                <option value="North Dakota">North Dakota</option>
+                <option value="Ohio">Ohio</option>
+                <option value="Oklahoma">Oklahoma</option>
+                <option value="Oregon">Oregon</option>
+                <option value="Pennsylvania">Pennsylvania</option>
+                <option value="Rhode Island">Rhode Island</option>
+                <option value="South Carolina">South Carolina</option>
+                <option value="South Dakota">South Dakota</option>
+                <option value="Tennessee">Tennessee</option>
+                <option value="Texas">Texas</option>
+                <option value="Utah">Utah</option>
+                <option value="Vermont">Vermont</option>
+                <option value="Virginia">Virginia</option>
+                <option value="Washington">Washington</option>
+                <option value="West Virginia">West Virginia</option>
+                <option value="Wisconsin">Wisconsin</option>
+                <option value="Wyoming">Wyoming</option>
+            </optgroup>  
+            </select><br>
         <label for="zipcode">Zipcode</label>
         <input type="text" id="zipcode" name="user_zipcode"><br>
       </fieldset>
