--- a/index.html
+++ b/index.html
@@ -86,7 +86,17 @@
             </optgroup>  
             </select><br>
         <label for="zipcode">Zipcode</label>
-        <input type="text" id="zipcode" name="user_zipcode"><br>
+        <input type="text" id="zipcode" name="user_zipcode">
+      </fieldset>
+      <fieldset>
+        <legend>Newsletter</legend>
+        <p>Select the newsletters you would like to recieve</p>
+        <input type="checkbox" id="htmlnz" value="html_news" name="html_news">
+        <label for="htmlnz">HTML News</label><br>
+        <input type="checkbox" id="cssnz" value="css_news" name="css_news">
+        <label for="cssnz">CSS News</label><br>
+        <input type="checkbox" id="jsnz" value="javascript_news" name="javascript_news">
+        <label for="jsnz">Javascript News</label>
       </fieldset>
     </form>
 
