Added radio buttons

--- a/index.html
+++ b/index.html
@@ -97,10 +97,20 @@
         <label for="cssnz">CSS News</label><br>
         <input type="checkbox" id="jsnz" value="javascript_news" name="javascript_news">
         <label for="jsnz">Javascript News</label>
+        <p>Newsletter format</p>
+        <input type="radio" id="htmlt" value="html_reg" name="html_regular">
+        <label for="htmlt">HTML</label><br>
+        <input type="radio" id="plaintext" value="plain_text" name="plain_text">
+        <label for="plaintext">Plain Text</label> 
+        <p>Other topics you'd like to hear about</p>
+        <textarea></textarea> 
       </fieldset>
     </form>
+    <button type="submit">Sign Up</button>
 
-    <footer></footer>
+    <footer>
+      <p>Copywright The Code Review</p>
+    </footer>
   </body>
 </html>
 
