border, legend, label

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="title">The Code Review</h1>
     </header>
 
-    <div>
+    <div class="topic">
       <h3>Signup for our newsletter</h3>
       <p>Get the latest news on how your code is doing straight in your inbox</p>
     </div>
