Made border line and room for legend

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <link href="css/styles.css" rel="stylesheet">
     </head>
 
-    <header class="">
+    <header>
       <h1 id="title">The Code Review</h1>
     </header>
 
-    <div class="topic">
+    <div id="topic">
       <h3>Signup for our newsletter</h3>
       <p>Get the latest news on how your code is doing straight in your inbox</p>
     </div>
