--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
 
     <form>
-      <fieldset>
-        <legend>Contact Information</legend>
+      <fieldset id="firstset">
+        <legend class="legend">Contact Information</legend>
         <label for="name">Full Name</label>
         <input type="text" id="name" name="full_name" placeholder="Required"><br>
         <label for="email">Email Address</label>
@@ -89,7 +89,7 @@
         <input type="text" id="zipcode" name="user_zipcode">
       </fieldset>
       <fieldset>
-        <legend>Newsletter</legend>
+        <legend class="legend">Newsletter</legend>
         <p>Select the newsletters you would like to recieve</p>
         <input type="checkbox" id="htmlnz" value="html_news" name="checkbox">
         <label for="htmlnz">HTML News</label><br>
