fixed dropdown to match

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <label for="state">State</label>
             <select id="state" name="user_state"><br>
             <optgroup label="State">
-                <option value="Choose State">Choose State</option>
+                <option value="" disabled selected hidden>Choose State</option>
                 <option value="Alabama">Alabama</option>
                 <option value="Alaska">Alaska</option>
                 <option value="Arizona">Arizona</option>
