--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <input type="tel" id="phone" name="user_phone"><br>
         <label for="address">Street Address</label>
         <input type="text" id="address" name="user_address"><br>
+        <label for="city">City</label>
+        <input type="text" id="city" name="user_city"><br>
         <label for="state">State</label>
             <select id="state" name="user_state"><br>
             <optgroup label="State">
