--- a/index.html
+++ b/index.html
@@ -92,14 +92,11 @@
         <input type="text" id="zipcode" name="user_zipcode">
       </fieldset>
       <fieldset>
-        <legend class="legend">Newsletter</legend>
+        <legend class="legend">Newsletter</legend> 
         <p>Select the newsletters you would like to recieve</p>
-        <input type="checkbox" id="htmlnz" value="html_news" name="checkbox">
-        <label for="htmlnz">HTML News</label><br>
-        <input type="checkbox" id="cssnz" value="css_news" name="checkbox">
-        <label for="cssnz">CSS News</label><br>
-        <input type="checkbox" id="jsnz" value="javascript_news" name="checkbox">
-        <label for="jsnz">Javascript News</label>
+        <input type="checkbox" id="htmlnz" value="html_news" name="checkbox"><label class="check" for="htmlnz">HTML News</label><br>
+        <input type="checkbox" id="cssnz" value="css_news" name="checkbox"><label class="check" for="cssnz">CSS News</label><br>
+        <input type="checkbox" id="jsnz" value="javascript_news" name="Javascript"><label class="check" for="jsnz">Javascript News</label>
         <p>Newsletter format</p>
         <input type="radio" id="htmlt" value="html_regular" name="radio">
         <label for="htmlt">HTML</label><br>
