--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     </head>
 
     <header>
-      <h1 id="title">The Code Review</h1>
+      <h1 id="title" class="flex">The Code Review</h1>
     </header>
 
-    <div id="topic">
+    <div id="topic" class="flex">
       <h3>Signup for our newsletter</h3>
       <p>Get the latest news on how your code is doing straight in your inbox</p>
     </div>
 
-    <form>
+    <form class="flex">
       <fieldset id="firstset">
         <legend class="legend">Contact Information</legend>
         <label for="name">Full Name</label>
@@ -109,7 +109,7 @@
     <button type="submit">Sign Up</button>
 
     <footer>
-      <p>Copywright The Code Review</p>
+      <p id="copywright">&copy; Copywright The Code Review</p>
     </footer>
   </body>
 </html>
