--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <link href="css/styles.css" rel="stylesheet">
     </head>
 
+    <body class="container">
     <header>
       <h1 id="title" class="flex">The Code Review</h1>
     </header>
