changed fieldset id's

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <form class="flex">
-      <fieldset id="firstset">
+      <fieldset id="contact">
         <legend class="legend">Contact Information</legend>
         <label for="name">Full Name</label>
         <input type="text" id="name" name="full_name" placeholder="Required" class="long"><br>
@@ -92,7 +92,7 @@
         <label for="zipcode">Zipcode</label>
         <input type="text" id="zipcode" name="user_zipcode" class="long">
       </fieldset>
-      <fieldset>
+      <fieldset id="newsletter">
         <legend class="legend">Newsletter</legend> 
         <p>Select the newsletters you would like to recieve</p>
         <input type="checkbox" id="htmlnz" value="html_news" name="checkbox"><label class="check" for="htmlnz">HTML News</label><br>
