--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <link href="css/styles.css" rel="stylesheet">
     </head>
 
-    <header>
-      <h1 id="title">The Code Review</h1>
+    <header id="title">
+      <h1>The Code Review</h1>
     </header>
 
     <div id="wrapper">
