--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
       <link href="css/styles.css" rel="stylesheet">
     </head>
 
-    <header id="title">
+    <header>
       <h1>The Code Review</h1>
     </header>
 
-    <div id="wrapper">
-
     <body>
-
       <div id="topic">
         <h3>Signup for our newsletter</h3>
         <p>Get the latest news on how your code is doing straight in your inbox</p>
@@ -116,7 +113,6 @@
         <p id="copywright">&copy; Copywright The Code Review</p>
       </footer>
     </body>
-  </div>
 </html>
 
 
