--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       <link href="css/styles.css" rel="stylesheet">
     </head>
 
-    <header>
+    <div id="title">
       <h1>The Code Review</h1>
-    </header>
+    </div>
 
     <body>
-      <div id="topic">
+      <header>
         <h3>Signup for our newsletter</h3>
         <p>Get the latest news on how your code is doing straight in your inbox</p>
-      </div>
+      </header>
 
       <form>
         <fieldset id="contact">
