Fixed mobile-first look

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link href="css/styles.css" rel="stylesheet">
     </head>
 
-    <div id="title">
+    <div>
       <h1>The Code Review</h1>
     </div>
 
