fixed spelling error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link href="css/styles.css" rel="stylesheet">
     </head>
 
-    <div>
+    <div id="title">
       <h1>The Code Review</h1>
     </div>
 
@@ -111,7 +111,7 @@
       <button type="submit">Sign Up</button>
 
       <footer>
-        <p id="copywright">&copy; Copywright The Code Review</p>
+        <p id="copyright">&copy; Copyright The Code Review</p>
       </footer>
     </body>
   </div>
