--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
         <form>
           <fieldset id="contact">
             <legend class="legend">Contact Information</legend>
-            <label for="name">Full Name</label>
-            <input type="text" id="name" name="full_name" placeholder="Required" class="long"><br>
-            <label for="email">Email Address</label>
-            <input type="email" id="email" name="user_email" placeholder="Required" class="long"><br>
-            <label for="phone">Phone Number</label>
-            <input type="tel" id="phone" name="user_phone" class="long"><br>
+            <p class="need">* Indicates Required Field</p>
+            <label for="name">Full Name *</label>
+            <input type="text" id="name" name="full_name" placeholder="John Smith" class="long" required><br>
+            <label for="email">Email Address *</label>
+            <input type="email" id="email" name="user_email" placeholder="johnsmith@email.com" class="long" required><br>
+            <label for="phone">Phone Number *</label>
+            <input type="tel" id="phone" name="user_phone" placeholder="(---)--- ---" class="long" required><br>
             <label for="address">Street Address</label>
             <input type="text" id="address" name="user_address" class="long"><br>
             <label for="city">City</label>
@@ -90,8 +91,8 @@
                     <option value="Wyoming">Wyoming</option>
                 </optgroup>  
                 </select><br>
-            <label for="zipcode">Zipcode</label>
-            <input type="text" id="zipcode" name="user_zipcode" class="long">
+            <label for="zipcode">Zipcode *</label>
+            <input type="text" id="zipcode" name="user_zipcode" placeholder="12345" class="long" required>
           </fieldset>
           <fieldset id="newsletter">
             <legend class="legend">Newsletter</legend> 
