--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <form>
           <fieldset id="contact">
             <legend class="legend">Contact Information</legend>
-            <p class="need">* Indicates Required Field</p>
+            <p class="need" id="need">* Indicates Required Field</p>
             <label for="name">Full Name *</label>
             <input type="text" id="name" name="full_name" placeholder="John Smith" class="long" required><br>
             <label for="email">Email Address *</label>
