--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </header>
           <form>
           <fieldset id="contact">
-            <legend class="legend">Contact Information</legend>
-            <p class="need" id="need">* Indicates Required Field</p>
+            <legend>Contact Information</legend>
+            <!-- <p class="hint">* Indicates Required Field</p> -->
             <label for="name">Full Name *</label>
             <input type="text" id="name" name="full_name" placeholder="John Smith" class="long" required><br>
             <label for="email">Email Address *</label>
-            <input type="email" id="email" name="user_email" placeholder="johnsmith@email.com" class="line2" class="long" required><br>
+            <input type="email" id="email" name="user_email" placeholder="johnsmith@email.com" class="long" required><br>
             <label for="phone">Phone Number *</label>
             <input type="tel" id="phone" name="user_phone" placeholder="(---)--- ---" class="long" required><br>
             <label for="address">Street Address</label>
