--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
           <form>
           <fieldset id="contact">
             <legend>Contact Information</legend>
-            <!-- <p class="hint">* Indicates Required Field</p> -->
-            <label for="name">Full Name *</label>
+            <label for="name">Full Name <span class="req">*</span></label>
             <input type="text" id="name" name="full_name" placeholder="John Smith" class="long" required><br>
-            <label for="email">Email Address *</label>
+            <label for="email">Email Address <span class="req">*</span></label>
             <input type="email" id="email" name="user_email" placeholder="johnsmith@email.com" class="long" required><br>
-            <label for="phone">Phone Number *</label>
+            <label for="phone">Phone Number <span class="req">*</span></label>
             <input type="tel" id="phone" name="user_phone" placeholder="(---)--- ---" class="long" required><br>
             <label for="address">Street Address</label>
             <input type="text" id="address" name="user_address" class="long"><br>
@@ -90,8 +89,9 @@
                   <option value="Wyoming">Wyoming</option>
               </optgroup>  
               </select><br>  
-            <label for="zipcode">Zipcode *</label>
-            <input type="text" id="zipcode" name="user_zipcode" placeholder="12345" class="long" required>
+            <label for="zipcode">Zipcode <span class="req">*</span></label>
+            <input type="text" id="zipcode" name="user_zipcode" placeholder="12345" class="long" required><br>
+            <p><span class="req">*</span> Indicates Required Field</p>
           </fieldset>
           <fieldset id="newsletter">
             <legend class="legend">Newsletter</legend> 
