Added placeholder text for all fields

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
               <label for="phone">Phone Number <span class="req">*</span></label>
               <input type="tel" id="phone" name="user_phone" placeholder="(---)--- ---" class="long" required><br>
               <label for="address">Street Address</label>
-              <input type="text" id="address" name="user_address" class="long"><br>
+              <input type="text" id="address" name="user_address" placeholder="123 Apple St" class="long"><br>
               <label for="city">City</label>
-              <input type="text" id="city" name="user_city" class="long"><br>
+              <input type="text" id="city" name="user_city" placeholder="Grand Rapids" class="long"><br>
               <label for="state">State</label>
                   <select id="state" name="user_state">
                   <optgroup label="State">
@@ -105,7 +105,7 @@
               <input type="radio" id="plaintext" value="plain_text" name="radio">
               <label for="plaintext" class="rad">Plain Text</label><br>
               <label for="text">Other topics you'd like to hear about</label><br>
-              <textarea id="text" name="text_area"></textarea> 
+              <textarea id="text" name="text_area" placeholder="Other topics you would like to hear about."></textarea> 
             </fieldset>
           </form>
         <button type="submit">Sign Up</button>
